# pick_and_place_cube_imitation_learning

./: .gitignore  .nova  Dockerfile  README.md  cell.cell  discover_gripper.py  pyproject.toml  realsense_local_connect.py
app/: cube_transfer_loop.py  gripper_helper.py  main.py  pick_and_place.py
app/camera/: __init__.py  camera_app_check.py  camera_client.py
app/models/: ABB_1010_037_15.glb  ABB_1100_0475_4.glb  ABB_1100_058_4.glb  ABB_1200_07_7.glb  ABB_1300_09_11.glb  ABB_1300_115_10.glb  ABB_1300_14_12.glb  ABB_15000_0_95_5.glb  ABB_15000_127_12.glb  ABB_15000_152_10.glb  ABB_1600_12_10.glb  ABB_1600_145_6.glb  ABB_2600ID_185_15.glb  ABB_2600ID_200_8.glb  ABB_2600_165_12.glb  ABB_2600_185_12.glb  ABB_4600_205_45.glb  ABB_4600_250_20.glb  ABB_4600_255_40.glb  ABB_5710_230_110.glb  ABB_5710_230_90_LID.glb  ABB_5710_270_70_LID.glb  ABB_5710_270_90.glb  ABB_5720_260_155_LID.glb  ABB_5720_260_180.glb  ABB_5720_300_125.glb  ABB_5720_300_90_LID.glb  ABB_6730_210_310.glb  ABB_6730_240_290.glb  FANUC_CR35iB.glb  (+80 more)
cube-imitation-learning/: .nova  Dockerfile  README.md  pyproject.toml
cube-imitation-learning/cube_imitation_learning/: __main__.py  register_programs.py  start_here.py
data_collection/: STEP_BY_STEP_GUIDE.md  collect_pick_and_place_episodes.py  lerobot_export_steps_1_3.json  recording_steps_1_3.json  recording_steps_1_3.template.json  setup_data_collection.py
zimmer_gripper_controller/: .gitignore  README.md  __init__.py  cli.py  client.py  config.py  controller.py  minimal_move.py  protocol.py  pyproject.toml  session.py  test.py
zimmer_gripper_controller/tests/: test_session.py
(+5 files in other folders)
